--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,18 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+  "name": "sample extension",
+  "description": "base level extesnion",
+  "version": "1",
+  "manifest_version": 2,
+  "_comment": "the section down is extension-related",
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "click on the title",
+    "default_icon": {
+      "19": "logo192.png",
+      "38": "logo512.png"
     }
-  ],
+  },
+  
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
